GNOME Bugzilla – Bug 724957
vaapidecode leaks the pool provided by upstream when it does not provide our meta
Last modified: 2014-06-18 12:05:23 UTC
See summary and attached patch
Created attachment 269995 [details] [review] decode: plug a memory leak
commit 3fbef25e13e231b34e4d50823c86bb28240f1318 Author: Matthew Waters <ystreet00@gmail.com> Date: Sun Feb 23 01:43:39 2014 +1100 vaapidecode: plug a memory leak. It can happen that there is a pool provided that does not advertise the vappivideometa. We should unref that pool before using our own. Discovered with vaapidecode ! {glimagesink,cluttersink} https://bugzilla.gnome.org/show_bug.cgi?id=724957 [fixed compilation by adding the missing semi-colon] Signed-off-by: Gwenole Beauchesne <gwenole.beauchesne@intel.com>